@startuml

package text_scraper {

    class TextExtractor {
        + extractPages(file: File): List[Data]
    }

    class Page{
        + text: String
        + page_number: Int
        + title: String

    }

    class TextReader {
        + extractText(file: File): List[Data]
    }

    class OCR {
        + extractText(file: File): List[Data]
    }
    class DocReader {
        + extractText(file: File): List[Data]
    }


    


    
    package image_preprocessing {
        class Pipeline {
            + apply(image: Image): Image
            + add_filter(self, image_filter: Callable):
        }
        note left of Pipeline: Pipe and Filter \n architecture pattern


        class PipelineFactory {
            + createPipeline(info): Pipeline
        }

        class Filter {
            + invert_image(): void 
            + grayscale_image(): void
            + binarize(): void
            + remove_noise(): void
            + thin_font(): void
            + thick_font(): void

        }
    }
    
    OCR --> PipelineFactory
    OCR --> Pipeline
    PipelineFactory --> Pipeline
    

}

package external_ocr {

    class TesseractOCR {
        + image_to_string(image: Image): String
    }
}

package post_processing {
    


    class TextPostProcessor {
        + process(List[Data]): List[Data]
    }

}


    


TextExtractor --> OCR
TextExtractor --> DocReader
TextExtractor --> TextReader
TextExtractor --> TextPostProcessor
OCR --> TesseractOCR
Pipeline --> Filter
TextExtractor --> Page


@enduml